--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,25 @@
 *.jar
 *.war
 *.ear
+
+.tmp/
+
+.tmp/*
+
+.tmp/**
+
+bin/
+
+bin/*
+
+bin/**
+
+target/
+
+target/*
+
+target/**
+
+.tmp/model_*.xmi
+
+model_*.xmi
